# intelligent-research-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  repo_structure.txt
src/ira/: __main__.py  cli.py  settings.py
src/ira/agent/: __init__.py  citation_mapper.py  graph.py  llm.py  nodes.py  runner.py  sanitizer.py  state.py  web_cache.py  web_search_tool.py
src/ira/app/: main.py
src/ira/contracts/: schemas.py
src/ira/ingest/: arxiv_downloader.py  chunk_runner.py  chunker.py  doc_id.py  docs_fetcher.py  github_fetcher.py  normalize.py  parse_code_snippets.py  parse_html_to_md.py  parse_pdf_to_md.py  processor.py  provenance.py  runner.py  seeds.py
src/ira/observability/: logging.py  middleware.py
src/ira/policy/: __init__.py  gate.py
src/ira/retrieval/: bm25_index.py  bm25_runner.py  embedder.py  hybrid_retriever.py  index_runner.py  parent_store.py  qdrant_index.py  rerank_runner.py  reranker.py
tests/: test_agent_graph.py  test_agent_nodes.py  test_bm25_index.py  test_chunker.py  test_citation_mapper.py  test_contracts.py  test_embedder.py  test_eval_reranker_dod.py  test_health.py  test_hybrid_retriever.py  test_normalize.py  test_parse_code_snippets.py  test_parse_html_to_md.py  test_parse_pdf_to_md.py  test_processor.py  test_qdrant_index.py  test_reranker.py  test_self_check.py  test_web_search_tool.py
