[project]
name = "ira"
version = "0.1.0"
description = "Intelligent Research Assistant (RAG + Tools) - LLM efficiency domain"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "pydantic-settings",
  "typer",
  "rich",
  "httpx>=0.28.1",
  "html2text>=2025.4.15",
  "beautifulsoup4>=4.14.3",
  "markdownify>=1.2.2",
  "pdfminer-six>=20260107",
  "charset-normalizer>=3.4.4",
  "pymupdf>=1.27.1",
  "pytesseract>=0.3.13",
  "opencv-python>=4.13.0.92",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
